@@ -32,7 +32,7 @@
 #define MUSTHAVE(var, cap, pb)	\
     {								\
 	int t;							\
-	if ((t = tgetnum(cap,pb)) < 0) {			\
+	if (tgetnum(cap,pb,&t) < 0) {				\
 		fprintf(stderr, "v6test: need %s\n", cap);	\
 		exit(1);					\
 	}							\
@@ -42,7 +42,7 @@
 #define MAYHAVE(var, cap, def, pb)			\
      {							\
 	int t;						\
-	if ((t = tgetnum(cap,pb)) < 0) 		\
+	if (tgetnum(cap,pb,&t) < 0) 			\
 		t = def;				\
 	var = t;					\
      }
@@ -148,7 +148,7 @@ make_ip6(char *name)
 		     "IPv6 version traffic class must be between 0 and 255");
 	ip6->ip6_vfc |= (val32 >> 4) & 0x0f;
 	*(&ip6->ip6_vfc + 1) |= (val32 & 0x0f) << 4; /* XXX: ugly... */
-	if ((val16 = tgetnum("ip6_plen", ip6buf)) < 0) {
+	if (tgetnum("ip6_plen", ip6buf, (int *) &val16)) < 0) {
 		if ((addr = tgetstr("ip6_plen", &bp, ip6buf)) &&
 		    strcmp(addr, "auto") == 0)
 			ip6plenauto = 1;
@@ -159,7 +159,7 @@ make_ip6(char *name)
 	} else
 		ip6->ip6_plen = (u_int16_t)val16;
 	HTONS(ip6->ip6_plen);
-	if ((val8 = tgetnum("ip6_nxt", ip6buf)) < 0) {
+	if (tgetnum("ip6_nxt", ip6buf, (int *)&val8) < 0) {
 		if ((addr = tgetstr("ip6_nxt", &bp, ip6buf)) &&
 		    strcmp(addr, "auto") == 0)
 			nxthdrp = &ip6->ip6_nxt;
@@ -1045,8 +1045,7 @@ make_raw(char *name)
 {
 	char rawbuf[MAXPKTSIZ], area[MAXPKTSIZ];
 	char *bp = area, *upper_data;
-	short val16;
-	char nxt;
+	short val16 = -1;
 
 	if (tgetent(rawbuf, name) <= 0) {
 		fprintf(stderr, "v6test: unknown header %s\n", name);
@@ -1057,9 +1056,9 @@ make_raw(char *name)
 	 * fulfills next header field in previous option only when raw_proto
 	 * is specified
 	 */
-	nxt= tgetnum("raw_proto", rawbuf);
-	if (nxthdrp && nxt >= 0)
-		*nxthdrp = nxt;
+	tgetnum("raw_proto", rawbuf, &val16);
+	if (nxthdrp && val16 >= 0)
+		*nxthdrp = (uint8_t) (val16 & 0xff);
 	nxthdrp = 0;
 	if ((upper_data = tgetstr("raw_data", &bp, rawbuf)) != NULL) {
 		gethex(upper_data);
